--- a/Property FW and wreath products/Medians/Enseignement Math/Median.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/Median.tex
@@ -951,7 +951,7 @@ Ultrametric spaces	&uncountable cofinality	&\checkmark&\checkmark&\xmark\\
 \hline
 Z$=2$-regular tree with $\Isom^+$	&B$\Z$	&\xmark	&\xmark	&\xmark\\
 \hline
-Spaces of finite diameter&all groups		&\checkmark&\checkmark&\xmark\\
+Spaces of finite diameter&hold for all groups		&\checkmark&\checkmark&\xmark\\
 \hline
 \end{tabular}
 
@@ -1115,8 +1115,8 @@ For (real) trees, it is possible to put a forest structure on $\powerset{\bigsqc
 For $E\in\powerset{\bigsqcup_{i\geq 1} G_i}$, and for each $i$ such that $E\cap G_j$ is empty for all $j\leq i$, add an edge from $E$ to $E\cup\{g\}$ for each $g\in G_i$. The graph obtained this way is a $G$-invariant subforest of the median graph on $\powerset{\bigsqcup_{i\geq 1} G_i}$.
 For Corollary~\ref{Cor:Cof}.2 we also need that the corresponding structure is invariant by the action of $H$, which is the case of the above examples, except for the tree structure.
 
-It is also possible to give a proof of Corollary~\ref{Cor:Cof} using axioms similar to (A1)-(A3).
-More precisely, for Corollary~\ref{Cor:Cof}.1 we need a weak form of the existence of seperating countable Cartesian products (for morphisms we only ask that $\bigoplus_{i\in\N} \Aut_\CatS(X_i)\subseteq\Aut_\CatS(\bigoplus_{i\in\N} X_i)$) and a strong version of (A1) saying that there exists an universal bound $M$ such that any non-trivial group $G$ acts on some \CatS-space moving a point at distance at least $M$.
+It is also possible to give a proof of Corollary~\ref{Cor:Cof}.1 using axioms similar to (A1)-(A3).
+More precisely, we need a weak form of the existence of seperating countable Cartesian products (for morphisms we only ask that $\bigoplus_{i\in\N} \Aut_\CatS(X_i)\subseteq\Aut_\CatS(\bigoplus_{i\in\N} X_i)$) and a strong version of (A1) saying that there exists an universal bound $M$ such that any non-trivial group $G$ acts on some \CatS-space moving a point at distance at least $M$.
 The axiomatization of Corollary~\ref{Cor:Cof}.2 is a little more complex.
 However, since in the following we will use Corollary~\ref{Cor:Cof} only for (real) trees, which do not have Cartesian powers, we will not elaborate on the details and let the proof to the interested reader.
 Instead, we will give an axiomatic proof of the following variation of Corollary~\ref{Cor:Cof}.2.
@@ -1159,7 +1159,7 @@ For every integer $n$, the function
 		y_0 & \textnormal{otherwise}
 	\end{cases}
 \]
-is in the $G\wr_XH$-orbit of $f_0$. We conclude that this orbit is unbounded and that $G\wr_XH$ does not have property~\BS.
+is in the $G\wr_XH$-orbit of $f_0$. By axiome (A3) this orbit is unbounded and $G\wr_XH$ does not have property~\BS.
 %
 %The group $\bigoplus_XG$ acts coordinatewise on  $\bigsqcup_XG$: the group $G_x$ acting by left multiplication on $G_x$ and trivially on $G_y$ for $y\neq x$. On the other hand, $H$ acts on $\bigsqcup_XG$ by permutation of the factors.
 %Altogether we have an action of $G\wr_XH$ on $\bigsqcup_XG$ and hence on the median graph $\powerset{\bigsqcup_XG}$.
