--- a/Property FW and wreath products/Medians/Enseignement Math/Referees.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/Referees.tex
@@ -236,8 +236,8 @@ For (real) trees, it is possible to put a forest structure on $\mathcal P(\bigsq
 For $E\in\mathcal P(\bigsqcup_{i\geq 1} G_i)$, and for each $i$ such that $E\cap G_j$ is empty for all $j\leq i$, add an edge from $E$ to $E\cup\{g\}$ for each $g\in G_i$. The graph obtained this way is a $G$-invariant subforest of the median graph on $\mathcal P(\bigsqcup_{i\geq 1} G_i)$.
 For Corollary~3.8.2 we also need that the corresponding structure is invariant by the action of $H$, which is the case of the above examples, except for the tree structure.
 
-It is also possible to give a proof of Corollary~3.8 using axioms similar to (A1)-(A3).
-More precisely, for Corollary~3.8.1 we need a weak form of the existence of seperating countable Cartesian products (for morphisms we only ask that $\bigoplus_{i\in\N} \Aut_\textbf{S}(X_i)\subseteq\Aut_\textbf{S}(\bigoplus_{i\in\N} X_i)$) and a strong version of (A1) saying that there exists an universal bound $M$ such that any non-trivial group $G$ acts on some \textbf{S}-space moving a point at distance at least $M$.
+It is also possible to give a proof of Corollary~3.8.1 using axioms similar to (A1)-(A3).
+More precisely, we need a weak form of the existence of seperating countable Cartesian products (for morphisms we only ask that $\bigoplus_{i\in\N} \Aut_\textbf{S}(X_i)\subseteq\Aut_\textbf{S}(\bigoplus_{i\in\N} X_i)$) and a strong version of (A1) saying that there exists an universal bound $M$ such that any non-trivial group $G$ acts on some \textbf{S}-space moving a point at distance at least $M$.
 The axiomatization of Corollary~3.8.2 is a little more complex.
 However, since in the following we will use Corollary~3.8 only for (real) trees, which do not have Cartesian powers, we will not elaborate on the details and let the proof to the interested reader.
 Instead, we will give an axiomatic proof of the following variation of Corollary~3.8.2.''
