Petites corrections + remarques

--- a/Property FW and wreath products/Medians/Enseignement Math/biblio.bib
+++ b/Property FW and wreath products/Medians/Enseignement Math/biblio.bib
@@ -405,7 +405,7 @@ MRREVIEWER = {R. J. Douglas},
 }
 
 @incollection {Ger97,
-    AUTHOR = {Gerasimov, V. N.},
+    AUTHOR = {Gerasimov, V.},
      TITLE = {Semi-splittings of groups and actions on cubings},
  BOOKTITLE = {Algebra, geometry, analysis and mathematical physics
               ({R}ussian) ({N}ovosibirsk, 1996)},
@@ -430,4 +430,37 @@ MRREVIEWER = {Igor Belegradek},
    MRCLASS = {54E35 (05C12 46A40 46B20 46B42)},
   MRNUMBER = {1244813},
 MRREVIEWER = {Nik Weaver},
+}
+
+@article {MR2197811,
+    AUTHOR = {Chatterji, Indira and Niblo, Graham},
+     TITLE = {From wall spaces to {$\rm CAT(0)$} cube complexes},
+   JOURNAL = {Internat. J. Algebra Comput.},
+  FJOURNAL = {International Journal of Algebra and Computation},
+    VOLUME = {15},
+      YEAR = {2005},
+    NUMBER = {5-6},
+     PAGES = {875--885},
+      ISSN = {0218-1967},
+   MRCLASS = {20F65 (20F38 20F69)},
+  MRNUMBER = {2197811},
+MRREVIEWER = {Robert W. Bell},
+       DOI = {10.1142/S0218196705002669},
+       URL = {https://doi.org/10.1142/S0218196705002669},
+}
+
+@article {MR2059193,
+    AUTHOR = {Nica, Bogdan},
+     TITLE = {Cubulating spaces with walls},
+   JOURNAL = {Algebr. Geom. Topol.},
+  FJOURNAL = {Algebraic \& Geometric Topology},
+    VOLUME = {4},
+      YEAR = {2004},
+     PAGES = {297--309},
+      ISSN = {1472-2747},
+   MRCLASS = {20F65 (20E42)},
+  MRNUMBER = {2059193},
+MRREVIEWER = {Murray J. Elder},
+       DOI = {10.2140/agt.2004.4.297},
+       URL = {https://doi.org/10.2140/agt.2004.4.297},
 }
