--- a/Property FW and wreath products/Medians/Enseignement Math/Median.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/Median.tex
@@ -1073,7 +1073,8 @@ We now state a result on infinite direct sums.
 %
 \begin{lem}\label{Lemma:Cof}%\GS{Ajouter $H$ un groupe quelconque agissant sur $X$ ?}
 %Suppose that \BS{} implies having uncountable cofinality.
-Let $G$ and $(G_x)_{x\in X}$ be non-trivial groups and let $H$ be a group acting on $X$. Then
+Let $G$ and $(G_x)_{x\in X}$ be non-trivial groups and let $H$ be a group acting on $X$.\PH{Ajouté H...}
+ Then
 \begin{enumerate}
 \item $\bigoplus_{x\in X}G_x$ has uncountable cofinality if and only if all the $G_x$ have uncountable cofinality and $X$ is finite,
 \item If $G\wr_XH$ has uncountable cofinality, then $H$ acts on $X$ with finitely many orbits.
@@ -1116,7 +1117,7 @@ We directly obtain
 %
 \begin{cor}\label{Cor:Cof}
 Suppose that \BS{} implies having uncountable cofinality.
-Let $G$ and $(G_x)_{x\in X}$ be non-trivial groups and let $H$ be a group acting on $X$. % \GS{Idem remarque ci-dessus pour $H$}Then
+Let $G$ and $(G_x)_{x\in X}$ be non-trivial groups and let $H$ be a group acting on $X$. \PH{Ajouté H...}% \GS{Idem remarque ci-dessus pour $H$}Then
 \begin{enumerate}
 \item $\bigoplus_{x\in X}G_x$ has property~\BS{} if and only if all the $G_x$ have property~\BS{} and $X$ is finite,
 \item If $G\wr_XH$ has property~\BS, then $H$ acts on $X$ with finitely many orbits.
